<resources>
    <string name="app_name">BooksApp</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be longer than 5 chars</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="have_an_account_log_in">Have an account? Log in!</string>
    <string name="RegisterFailed">Register error!</string>
    <string name="RegisterSuccess">Registered successfully!</string>
    <string name="PasswordsDontMatch">Passwords do not match</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nickname">Nickname</string>
    <string name="title_activity_tag_settings">TagSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ShortNickaname">To short nickname</string>
    <string name="descripiton">Descripiton</string>
    <string name="BookTitleError">Book has to have a title</string>
    <string name="DescriptionError">Description to short</string>
    <string name="AuthorNameError">Specify author name</string>
    <string name="TagsError">Select at least two tags</string>
    <string name="picError">Add picture of book!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="SpecifyLoc">Specify your location</string>
    <string name="notLong">not long enough</string>
    <string name="ValidNameError">Not valid name</string>
    <string name="preference_file_key">com.example.booksapp.23423</string>
    <string name="FileList">FileList</string>
    <string name="add_to_favourites">add to favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">Home</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="booked">Booked</string>
    <string name="audio">Audio</string>
</resources>