<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smb.booksapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smb.booksapp.TagsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tags" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smb.booksapp.UserInfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_user_info" />

    <fragment
        android:id="@+id/nav_audio"
        android:name="com.example.smb.booksapp.AudiobooksFragment"
        android:label="Your audiobooks"
        tools:layout="@layout/fragment_audiobooks" />
    <fragment
        android:id="@+id/addedBooks"
        android:name="com.example.smb.booksapp.AddedBooksFragment"
        android:label="Your books"
        tools:layout="@layout/fragment_added_books" />

    <fragment
        android:id="@+id/booked"
        android:name="com.example.smb.booksapp.BookedBooksFragment"
        android:label="Booked books"
        tools:layout="@layout/fragment_booked_books" />
</navigation>